ALTER TABLE "liked_songs" ADD COLUMN "genre" TEXT;
