generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// Role enum untuk RBAC (Role-Based Access Control)
enum Role {
  USER
  ADMIN
  SUPER_ADMIN
}

// User model untuk authentication
model User {
  id        String   @id @default(cuid())
  email     String   @unique
  username  String   @unique
  password  String?
  googleId  String?  @unique
  authProvider String @default("local")
  role         Role   @default(USER)
  avatar    String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  playlists   Playlist[]
  likedSongs  LikedSong[]
  playHistory PlayHistory[]
  appReview   AppReview?
  
  @@map("users")
}

// Playlist model
model Playlist {
  id          String   @id @default(cuid())
  userId      String
  name        String
  description String?
  isPublic    Boolean  @default(false)
  thumbnail   String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  user  User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  songs PlaylistSong[]

  @@index([userId])
  @@map("playlists")
}

// Junction table untuk Playlist dan Song
model PlaylistSong {
  id         String   @id @default(cuid())
  playlistId String
  musicId    String
  title      String
  artist     String
  cover      String
  duration   Int
  videoId    String?
  addedAt    DateTime @default(now())

  playlist Playlist @relation(fields: [playlistId], references: [id], onDelete: Cascade)

  @@unique([playlistId, musicId])
  @@index([playlistId])
  @@map("playlist_songs")
}

// Song/Music model (cache dari Deezer/YouTube)
model Song {
  id          String   @id @default(cuid())
  title       String
  artist      String
  album       String?
  duration    Int      // dalam detik
  deezerUrl   String?  @unique
  youtubeUrl  String?  @unique
  thumbnail   String?
  genre       String?
  releaseDate DateTime?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  playHistory PlayHistory[]

  @@index([title])
  @@index([artist])
  @@map("songs")
}

// Liked Songs model
model LikedSong {
  id        String   @id @default(cuid())
  userId    String
  musicId   String
  title     String
  artist    String
  cover     String
  duration  Int
  videoId   String?
  genre     String?
  createdAt DateTime @default(now())

  user User  @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, musicId])
  @@index([userId])
  @@map("liked_songs")
}

// Play History model
model PlayHistory {
  id        String   @id @default(cuid())
  userId    String
  songId    String
  playedAt  DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  song Song @relation(fields: [songId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([songId])
  @@map("play_history")
}

// Ulasan aplikasi dari user. Satu user cuma punya satu ulasan aktif.
model AppReview {
  id        String   @id @default(cuid())
  userId    String   @unique
  rating    Int
  review    String
  adminReply String?
  repliedAt  DateTime?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([createdAt])
  @@map("app_reviews")
}
